update tester to not use sleep polling for finished test